--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Conversational Space Map App"
-dynamic = ["version"]
-dependencies = [
+version = 0.0.2 # RELEASE
+dependencies = [  # RELEASE
   "toga-chart",
   "toga",
   "mockito",
@@ -42,7 +42,7 @@ Repository = "https://github.com/manuelbieri/ConversationalSpaceMapApp.git"
 [tool.briefcase]
 project_name = "Conversational Space Map App"
 bundle = "ch.manuelbieri"
-version = "0.0.2"
+version = "0.0.2" # RELEASE
 url = "https://github.com/manuelbieri/ConversationalSpaceMap"
 license.file = "LICENSE"
 author = "Manuel Bieri"
