--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
   #   5 - Production/Stable
   "Development Status :: 4 - Beta",
   # Pick your license as you wish (see also "license" above)
-  "License :: OSI Approved :: BSD-3-Clause license",
+  "License :: OSI Approved :: BSD-3-Clause",
   # Specify the Python versions you support here.
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.12",
