--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,13 @@ maintainers = [
 ]
 description = "Generate conversational space maps for interview data."
 readme = "README.rst"
+license = {text = "BSD-3-Clause License"}
 classifiers = [
   # How mature is this project? Common values are
   #   3 - Alpha
   #   4 - Beta
   #   5 - Production/Stable
   "Development Status :: 4 - Beta",
-  # Pick your license as you wish (see also "license" above)
-  "License :: OSI Approved :: BSD-3-Clause",
   # Specify the Python versions you support here.
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.12",
