--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-python@v4
 
       - name: Install dependencies
-        run: pip install -r pyproject.toml
+        run: pip install .[test_requires]
 
       - name: Run tests
         run: |
