--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/setup-python@v4
 
       - name: Install dependencies
-        run: pip install .
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
 
       - name: Run tests
         run: |
