--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt install libgirepository1.0-dev 
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
 
