--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Generate Report
       run: |
         pip install coverage
-        coverage run -m unittest discover tests "Test_*.py"
+        coverage run -m unittest discover tests "test_*.py"
         coverage xml
 
     - name: Upload Coverage to Codecov
