--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 /conversationalspacemapapp/__pycache__
 /conversationalspacemapapp/Parser/__pycache__
+/conversationalspacemapapp/Plotter/__pycache__
