--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [  # RELEASE
   "toga-chart",
   "toga",
   "mockito",
+  "pyqt6"
 ]
 requires-python = ">= 3.12"
 authors = [
@@ -66,6 +67,7 @@ test_sources = [
 
 requires = [
    "toga-chart",
+    "pyqt6"
 ]
 test_requires = [
     "mockito",
