--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,11 +85,12 @@ jobs:
             ${{ matrix.briefcase-package-args }}
 
       - name: Upload App
-        uses: actions/upload-artifact@v4
+        uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: App-${{ matrix.target }}
-          path: dist
-          if-no-files-found: error
+          file: "dist/*"
+          tags: true
 
       - name: Upload Log
         if: failure()
