--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 exclude = ["assets*"]
+include = [
+    "conversationalspacemapapp/resources/*",
+    "conversationalspacemapapp/App/assets/history.txt"
+]
 
 [project]
 name = "ConversationalSpaceMapApp"
