--- a/.github/workflows/CI-ubuntu.yml
+++ b/.github/workflows/CI-ubuntu.yml
@@ -25,9 +25,8 @@ jobs:
         sudo apt install git build-essential pkg-config python3-dev python3-venv libgirepository1.0-dev libcairo2-dev gir1.2-gtk-3.0 libcanberra-gtk3-module
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
+        export DISPLAY=:0
 
     - name: Generate Report
       run: |
-        pip install coverage
-        coverage run -m unittest discover tests "test_*.py"
-        coverage xml
+        python -m unittest discover tests "test_*.py"
