--- a/.github/workflows/CI-ubuntu.yml
+++ b/.github/workflows/CI-ubuntu.yml
@@ -22,11 +22,11 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install git build-essential pkg-config python3-dev python3-venv libgirepository1.0-dev libcairo2-dev gir1.2-gtk-3.0 libcanberra-gtk3-module
+        sudo apt install xvfb # install virtual framebuffer
+        sudo apt install git build-essential pkg-config python3-dev python3-venv libgirepository1.0-dev libcairo2-dev gir1.2-gtk-3.0 libcanberra-gtk3-module # install toga dependencies
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
-        export DISPLAY=:0
 
     - name: Generate Report
       run: |
-        python -m unittest discover tests "test_*.py"
+        xvfb-run python -m unittest discover tests "test_*.py"
