--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -23,9 +23,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
+        rm -rf ~/.matplotlib
+        rm -rf ~/.cache/matplotlib
+        rm -rf ~/.cache/fontconfig
 
     - name: Generate Report
       run: |
         pip install coverage
-        coverage run -m unittest discover tests "test_*.py"
-        coverage xml
+        python -m unittest discover tests "test_*.py"
