--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -23,9 +23,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
-        rd /s /q ~/.matplotlib
-        rd /s /q ~/.cache/matplotlib
-        rd /s /q ~/.cache/fontconfig
+        rd /s ~/.matplotlib
+        rd /s ~/.cache/matplotlib
+        rd /s ~/.cache/fontconfig
 
     - name: Generate Report
       run: |
