--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -27,4 +27,5 @@ jobs:
     - name: Generate Report
       run: |
         pip install coverage
+        python -c "import matplotlib; print matplotlib.__version__"
         python -m unittest discover tests "test_*.py"
