--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -28,4 +28,7 @@ jobs:
       run: |
         pip install coverage
         python -c "import matplotlib as mpl; print(mpl.get_cachedir())"
+        rmdir ~\.matplotlib
+        rmdir ~\.cache\matplotlib
+        rmdir ~\.cache\fontconfig
         python -m unittest discover tests "test_*.py"
