--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Generate Report
       run: |
         pip install coverage
-        python -c "import matplotlib as mpl; print(mpl.get_cachedir())"
+        python -c "import matplotlib as mpl; print(mpl.__version__)"
         rmdir ~\.matplotlib
         rmdir ~\.cache\fontconfig
         python -m unittest discover tests "test_*.py"
