--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -21,18 +21,10 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m venv venv
+        venv\Scripts\activate
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
-
-    - name: Cache Matplotlib font cache
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/matplotlib
-        key: ${{ runner.os }}-matplotlib-cache
-
-    - name: Prebuild Matplotlib font cache
-      run: |
-        python -c "import matplotlib.pyplot as plt; plt.figure()"
 
     - name: Generate Report
       run: |
