--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -21,6 +21,8 @@ jobs:
 
     - name: Install dependencies
       run: |
+        curl -o git-installer.exe https://github.com/git-for-windows/git/releases/latest/download/Git-2.48.1-64-bit.exe
+        git-installer.exe /SILENT
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
 
