--- a/.github/workflows/CI-win.yml
+++ b/.github/workflows/CI-win.yml
@@ -25,6 +25,10 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
 
+    - name: Prebuild Matplotlib font cache
+      run: |
+        python -c "import matplotlib.pyplot as plt; plt.figure()"
+
     - name: Generate Report
       run: |
         python -m unittest discover tests "test_*.py"
