--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Install Briefcase
         run: |
           python -m pip install -U pip setuptools wheel
-          python -m pip install briefcase
+          python -m pip install briefcase -U
 
       - name: Build App
         run: |
