--- a/.github/workflows/CI-macos.yml
+++ b/.github/workflows/CI-macos.yml
@@ -24,7 +24,7 @@ jobs:
         # sudo apt update
         # sudo apt install git build-essential pkg-config python3-dev libgirepository1.0-dev libcairo2-dev gir1.2-gtk-3.0 libcanberra-gtk3-module
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        python -m pip install -r requirements_mac.txt
 
     - name: Generate Report
       run: |
