--- a/.github/workflows/CI-ubuntu.yml
+++ b/.github/workflows/CI-ubuntu.yml
@@ -26,7 +26,7 @@ jobs:
         sudo apt install gir1.2-webkit2-4.1
         sudo apt install git build-essential pkg-config python3-dev python3-venv libgirepository1.0-dev libcairo2-dev gir1.2-gtk-3.0 libcanberra-gtk3-module # install toga dependencies
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        python -m pip install -r requirements_ubuntu.txt
 
     - name: Generate Report
       run: |
